--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "˹𝐍ιтуα ✘ 𝐌υʂι𝐂˼",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/14c628ff007322601d361.jpg",
+    "logo": "https://te.legra.ph/file/6298d377ad3eb46711644.jpg",
     "keywords": [
     "python3",
     "telegram",
